--- a/web/resources/assets/css/style.css
+++ b/web/resources/assets/css/style.css
@@ -21,10 +21,10 @@
 
 
 
-body {
+/*body {
     font-family: 'Roboto', sans-serif;
     line-height: 30px;
-}
+}*/
 
 .set-radius-zero {
     border-radius: 0px;
