--- a/web/resources/css/jsfcrud.css
+++ b/web/resources/css/jsfcrud.css
@@ -10,7 +10,9 @@
 }
 .ui-widget-header {
     text-align: center;
+    text-align: center;
     text-transform: uppercase;
 }
 .ui-button {
+    margin-top: 10px !important;
 }
