--- a/web/resources/assets/css/style.css
+++ b/web/resources/assets/css/style.css
@@ -38,6 +38,13 @@
     padding-bottom: 60px;
 }
 
+.content-wrapper-mine {
+    margin-top: 40px;
+    height: 600px;
+    min-height: 600px;
+    padding-bottom: 60px;
+}
+
 .page-head-line {
     font-weight: 900;
     padding-bottom: 20px;
